Sugati/src/objects/Site__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LastReferenceNumber__c</fullName>
        <label>LastReferenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_Record_Limit__c</fullName>
        <label>Reports Record Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteURLAdmin__c</fullName>
        <label>SiteURLAdmin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SiteURLCommunity__c</fullName>
        <label>SiteURLCommunity</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Widgety_AppId__c</fullName>
        <label>Widgety AppId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Widgety_Token__c</fullName>
        <label>Widgety Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
</CustomObject>